fixed input box text color on dark mode

--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -18,6 +18,10 @@
   text-align: center;
 }
 
+.dark .search-box-container input {
+  color: var(--color-background);
+}
+
 .search-box-container ::placeholder {
   /* color: var(--color-background); */
 }
